test/Error/Main/Main.ds

-- type inferencer should complain if main does not have type () -> ()

main = "fool"
